crates/textweaver-cite/tests/it/snapshots/it__formatting__ama_plain.snap
---
source: crates/textweaver-cite/tests/it/formatting.rs
expression: "render(\"ama\", OutputFormat :: Plain)"
---
style: AMA Manual of Style 11th edition
citations:
  [@kucsko2013] => [1]
  [@dahl1988, p. 12] => [2(p12)]
  [see @smyth2007, pp. 5-6; also @vangogh2020] => see [3(pp5–6)], also [4]
  @muller2019 [chap. 3] => [5(chap3)]
  [@who2021; -@access2024] => [6],[7]
  [@nobody2000] => missing reference nobody2000
missing: nobody2000
bibliography of cited works:
  [kucsko2013] 1. Kucsko G, Maurer PC, Yao NY. Nanometre-scale thermometry in a living cell. Nature. 2013;500(7460):54-58. doi:10.1038/nature12373
  [dahl1988] 2. Dahl R. Fantastic Mr. Fox. Puffin; 1988.
  [smyth2007] 3. Smyth B. Adventures in personalized information access. In: User Modeling 2007. Lecture Notes in Computer Science. Springer; 2007:5-6. doi:10.1007/978-3-540-74958-5_4
  [vangogh2020] 4. van Gogh V, The Accessible Reading Group. Screen readers and the reading of mathematics. In: Proceedings of the Conference on Accessible Reading. Accessible Press; 2020:101-110.
  [muller2019] 5. Müller J. Hörbücher und Sprachsynthese. PhD thesis. Universität Wien; 2019.
  [who2021] 6. World Health Organization. World Report on Vision & Print Disability. World Health Organization; 2021. https://example.org/who_report?id=1&lang=en
  [access2024] 7. Doe J. Designing for keyboard and screen reader users. Accessibility Notes. January 15, 2024. Accessed September 1, 2026. https://example.org/notes/keyboard
whole library:
  [kucsko2013] 1. Kucsko G, Maurer PC, Yao NY. Nanometre-scale thermometry in a living cell. Nature. 2013;500(7460):54-58. doi:10.1038/nature12373
  [dahl1988] 2. Dahl R. Fantastic Mr. Fox. Puffin; 1988.
  [smyth2007] 3. Smyth B. Adventures in personalized information access. In: User Modeling 2007. Lecture Notes in Computer Science. Springer; 2007:5-6. doi:10.1007/978-3-540-74958-5_4
  [vangogh2020] 4. van Gogh V, The Accessible Reading Group. Screen readers and the reading of mathematics. In: Proceedings of the Conference on Accessible Reading. Accessible Press; 2020:101-110.
  [muller2019] 5. Müller J. Hörbücher und Sprachsynthese. PhD thesis. Universität Wien; 2019.
  [who2021] 6. World Health Organization. World Report on Vision & Print Disability. World Health Organization; 2021. https://example.org/who_report?id=1&lang=en
  [access2024] 7. Doe J. Designing for keyboard and screen reader users. Accessibility Notes. January 15, 2024. Accessed September 1, 2026. https://example.org/notes/keyboard
