crates/textweaver-cite/tests/it/snapshots/it__formatting__apa_plain.snap
---
source: crates/textweaver-cite/tests/it/formatting.rs
expression: "render(\"apa\", OutputFormat :: Plain)"
---
style: APA Style 7th edition
citations:
  [@kucsko2013] => (Kucsko et al., 2013)
  [@dahl1988, p. 12] => (Dahl, 1988, p. 12)
  [see @smyth2007, pp. 5-6; also @vangogh2020] => (see Smyth, 2007, pp. 5–6; also van Gogh & The Accessible Reading Group, 2020)
  @muller2019 [chap. 3] => Müller (2019, Chapter 3)
  [@who2021; -@access2024] => (World Health Organization, 2021; 2024)
  [@nobody2000] => (missing reference nobody2000)
missing: nobody2000
bibliography of cited works:
  [dahl1988] Dahl, R. (1988). Fantastic Mr. Fox. Puffin.
  [access2024] Doe, J. (2024, January 15). Designing for keyboard and screen reader users. Accessibility Notes. https://example.org/notes/keyboard
  [kucsko2013] Kucsko, G., Maurer, P. C., & Yao, N. Y. (2013). Nanometre-scale thermometry in a living cell. Nature, 500(7460), 54–58. https://doi.org/10.1038/nature12373
  [muller2019] Müller, J. (2019). Hörbücher und Sprachsynthese [PhD thesis]. Universität Wien.
  [smyth2007] Smyth, B. (2007). Adventures in personalized information access. In C. Conati & K. McCoy (Eds.), User Modeling 2007 (pp. 5–6). Springer. https://doi.org/10.1007/978-3-540-74958-5_4
  [vangogh2020] van Gogh, V., & The Accessible Reading Group. (2020). Screen readers and the reading of mathematics. In Proceedings of the Conference on Accessible Reading (pp. 101–110). Accessible Press.
  [who2021] World Health Organization. (2021). World report on vision & print disability (WHO/2021.1). World Health Organization. https://example.org/who_report?id=1&lang=en
whole library:
  [dahl1988] Dahl, R. (1988). Fantastic Mr. Fox. Puffin.
  [access2024] Doe, J. (2024, January 15). Designing for keyboard and screen reader users. Accessibility Notes. https://example.org/notes/keyboard
  [kucsko2013] Kucsko, G., Maurer, P. C., & Yao, N. Y. (2013). Nanometre-scale thermometry in a living cell. Nature, 500(7460), 54–58. https://doi.org/10.1038/nature12373
  [muller2019] Müller, J. (2019). Hörbücher und Sprachsynthese [PhD thesis]. Universität Wien.
  [smyth2007] Smyth, B. (2007). Adventures in personalized information access. In C. Conati & K. McCoy (Eds.), User Modeling 2007 (pp. 5–6). Springer. https://doi.org/10.1007/978-3-540-74958-5_4
  [vangogh2020] van Gogh, V., & The Accessible Reading Group. (2020). Screen readers and the reading of mathematics. In Proceedings of the Conference on Accessible Reading (pp. 101–110). Accessible Press.
  [who2021] World Health Organization. (2021). World report on vision & print disability (WHO/2021.1). World Health Organization. https://example.org/who_report?id=1&lang=en
