crates/textweaver-cite/tests/it/snapshots/it__formatting__ieee_plain.snap
---
source: crates/textweaver-cite/tests/it/formatting.rs
expression: "render(\"ieee\", OutputFormat :: Plain)"
---
style: IEEE Reference Guide version 11.29.2023
citations:
  [@kucsko2013] => [1]
  [@dahl1988, p. 12] => [2, p. 12]
  [see @smyth2007, pp. 5-6; also @vangogh2020] => see [3, pp. 5–6], also [4]
  @muller2019 [chap. 3] => J. Müller [5, Ch. 3]
  [@who2021; -@access2024] => [6], [7]
  [@nobody2000] => missing reference nobody2000
missing: nobody2000
bibliography of cited works:
  [kucsko2013] [1] G. Kucsko, P. C. Maurer, and N. Y. Yao, “Nanometre-scale thermometry in a living cell,” Nature, vol. 500, no. 7460, pp. 54–58, Jul. 2013, doi: 10.1038/nature12373.
  [dahl1988] [2] R. Dahl, Fantastic Mr. Fox. London: Puffin, 1988.
  [smyth2007] [3] B. Smyth, “Adventures in personalized information access,” in User Modeling 2007, C. Conati and K. McCoy, Eds., in Lecture Notes in Computer Science., Berlin: Springer, 2007, pp. 5–6. doi: 10.1007/978-3-540-74958-5_4.
  [vangogh2020] [4] V. van Gogh and The Accessible Reading Group, “Screen readers and the reading of mathematics,” in Proceedings of the Conference on Accessible Reading, Accessible Press, 2020, pp. 101–110.
  [muller2019] [5] J. Müller, “Hörbücher und Sprachsynthese,” PhD thesis, Universität Wien, 2019.
  [who2021] [6] World Health Organization, “World report on vision & print disability,” World Health Organization, Geneva, WHO/2021.1, Mar. 2021. [Online]. Available: https://example.org/who_report?id=1&lang=en
  [access2024] [7] J. Doe, “Designing for keyboard and screen reader users,” Accessibility Notes. Accessed: Sep. 01, 2026. [Online]. Available: https://example.org/notes/keyboard
whole library:
  [kucsko2013] [1] G. Kucsko, P. C. Maurer, and N. Y. Yao, “Nanometre-scale thermometry in a living cell,” Nature, vol. 500, no. 7460, pp. 54–58, Jul. 2013, doi: 10.1038/nature12373.
  [dahl1988] [2] R. Dahl, Fantastic Mr. Fox. London: Puffin, 1988.
  [smyth2007] [3] B. Smyth, “Adventures in personalized information access,” in User Modeling 2007, C. Conati and K. McCoy, Eds., in Lecture Notes in Computer Science., Berlin: Springer, 2007, pp. 5–6. doi: 10.1007/978-3-540-74958-5_4.
  [vangogh2020] [4] V. van Gogh and The Accessible Reading Group, “Screen readers and the reading of mathematics,” in Proceedings of the Conference on Accessible Reading, Accessible Press, 2020, pp. 101–110.
  [muller2019] [5] J. Müller, “Hörbücher und Sprachsynthese,” PhD thesis, Universität Wien, 2019.
  [who2021] [6] World Health Organization, “World report on vision & print disability,” World Health Organization, Geneva, WHO/2021.1, Mar. 2021. [Online]. Available: https://example.org/who_report?id=1&lang=en
  [access2024] [7] J. Doe, “Designing for keyboard and screen reader users,” Accessibility Notes. Accessed: Sep. 01, 2026. [Online]. Available: https://example.org/notes/keyboard
